fix(nav) correct spacing for dropdown on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_header.scss
@@ -113,7 +113,7 @@
     padding-top: 20px;
     z-index: 10;
     position: absolute;
-    top: 30px;
+    top: 15px;
     background: rgb(255, 255, 255);
     width: 100%;
     left: 0;
